--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>isthisabook.club?</title>
+  <title>isthisabookclub?</title>
       <link rel="stylesheet" href="css/style.css">
       <script  src="js/index.js"></script>
       <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
@@ -25,29 +25,21 @@
 
 <div class="wall">
     <div class="threshold">
-        <div class = "content">
-          <img src="intro.gif" width = "200">
-           <p>is this a book club?</p>
-          
-          
-          <!-- Begin MailChimp Signup Form -->
-
-<!-- Begin MailChimp Signup Form -->
-
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
-          <div style="font-size:2em;">
-            <a href = "https://litchin.wordpress.com/2018/04/05/isthisabook-club/"><i class="fas fa-question"></i> recapitulation</a><br>
-            <a href = "https://www.youtube.com/watch?v=Vl0V6v9Re1U&feature=youtu.be"><i class="fas fa-assistive-listening-systems"></i> trailer</a><br>
+      <div class = "content">
+        <img src="intro.gif" width = "200">
+          <p>is this a book club?</p>
+        <div style="font-size:2em;">
+          <a href = "https://litchin.wordpress.com/2018/04/05/isthisabook-club/"><i class="fas fa-question"></i> recapitulation</a><br>
+          <a href = "https://www.youtube.com/watch?v=Vl0V6v9Re1U&feature=youtu.be"><i class="fas fa-assistive-listening-systems"></i> trailer</a><br>
           <a href = "https://docs.google.com/document/d/1FTIWfSra_-DiTSHOSlsEVrgkhHPqMqVzVFpiJHbC_kA/edit?usp=sharing"><i class="fas fa-user-secret"></i> guest book</a> <br>
-          <a href = "https://github.com/spamchurch/isthisabookclub"><i class="fas fa-parachute-box"></i> deploy kit</a><br>
-      </div>
+          <a href = "https://github.com/tobinsouth/isthisabookclub"><i class="fas fa-parachute-box"></i> deploy kit</a><br>
         </div>
-
-        <div class="door">   
-           <img src="eye.png" width = "200" >
-        </div>
-    </div>
+  </div>
+  <div class="door">   
+      <img src="eye.png" width = "200" >
+  </div>
+  </div>
+  <div style="position: absolute; top: 0; left: 0;"><img src="logo.png" width = "30" ></div>
 </div>
 </body>
 </html>
